local host and errors messages ok

--- a/public/404.html
+++ b/public/404.html
@@ -14,14 +14,8 @@
     </header>
     <main>
         <section>
-            <h2>An error occurred while loading the page. Please try again later.</h2>
-
-            <ul>
-                <li><a href="/">Go Back</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-
-            <img src=" " alt="">
+            <h2> Sorry!! An error has occurred while loading the page. Please try again.</h2>
+            <img src="https://media.istockphoto.com/vectors/window-system-error-vector-id1199669890?k=20&m=1199669890&s=612x612&w=0&h=NVEHec9P1DIM9dNaoN718pAmz3JqigcPKQGTfSkmbSY= " alt="">
         </section>
     </main>
 </body>
