--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>API Deployment</title>
 </head>
+<h1>Landscape gallery API</h1>
+<ul>
+    <li>api/findPhoto</li>
+    <li>api/findPhoto/:id</li>
+</ul>
 
 <body>
 
