modules exports issues checked

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 </head>
 <h1>Landscape gallery API</h1>
 <ul>
-    <li>api/findPhoto</li>
-    <li>api/findPhoto/:id</li>
+    <li>Link1 </li>
+    <li>Link 2:id</li>
 </ul>
 
 <body>
