--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Deployment</title>
+    <title>API : Deploying a server to Heroku</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
-<h1>Landscape gallery API</h1>
+<h1>API Landscape Gallery </h1>
 <ul>
-    <li>Link1 </li>
-    <li>Link 2:id</li>
+    <li>Link 1: for API list </li>
+    <li>Link 2: for random API item (:id)</li>
 </ul>
 
 <body>
